frontend_tests/negative/module_import_cycle/cmd/app/main.go
package main

import _ "example.com/renvotests/negative/module_cycle/lib"

func main() {}
